{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 138,
  "lineage": "5e97f3b6-7c38-6a5a-c9df-5c97eab81144",
  "resources": [
    {
      "module": "module.backend_app",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].backend",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "sentinel-backend/hello-backend",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/scheme": "internal",
                  "alb.ingress.kubernetes.io/target-type": "ip"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "hello-backend",
                "namespace": "sentinel-backend",
                "resource_version": "26344",
                "uid": "0359cb8f-0154-4cad-93c8-63a7e11fb4d4"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "alb",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "hello-backend",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "internal-k8s-sentinel-hellobac-a14d3fb6f3-1953451713.eu-west-2.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": true
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "hello-backend",
            "namespace": "sentinel-backend"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.backend",
            "module.backend_app.kubernetes_service.this",
            "module.eks_backend.aws_eks_addon.coredns",
            "module.eks_backend.aws_eks_addon.kube_proxy",
            "module.eks_backend.aws_eks_addon.vpc_cni",
            "module.eks_backend.aws_eks_cluster.this",
            "module.eks_backend.aws_eks_node_group.default",
            "module.eks_backend.aws_iam_openid_connect_provider.this",
            "module.eks_backend.aws_iam_role.cluster",
            "module.eks_backend.aws_iam_role.node",
            "module.eks_backend.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks_backend.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceController",
            "module.eks_backend.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.eks_backend.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.eks_backend.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.eks_backend.aws_iam_role_policy_attachment.node_AmazonSSMManagedInstanceCore",
            "module.eks_backend.data.aws_caller_identity.current",
            "module.eks_backend.data.aws_partition.current",
            "module.eks_backend.data.aws_region.current",
            "module.eks_backend.data.tls_certificate.oidc_cert",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_app",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].backend",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "sentinel-backend",
            "metadata": [
              {
                "generation": 0,
                "name": "sentinel-backend",
                "resource_version": "17310",
                "uid": "9f07e310-2f25-44c3-80fb-e42b4732c149"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "sentinel-backend"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.backend",
            "module.eks_backend.aws_eks_addon.coredns",
            "module.eks_backend.aws_eks_addon.kube_proxy",
            "module.eks_backend.aws_eks_addon.vpc_cni",
            "module.eks_backend.aws_eks_cluster.this",
            "module.eks_backend.aws_eks_node_group.default",
            "module.eks_backend.aws_iam_openid_connect_provider.this",
            "module.eks_backend.aws_iam_role.cluster",
            "module.eks_backend.aws_iam_role.node",
            "module.eks_backend.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks_backend.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceController",
            "module.eks_backend.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.eks_backend.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.eks_backend.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.eks_backend.aws_iam_role_policy_attachment.node_AmazonSSMManagedInstanceCore",
            "module.eks_backend.data.aws_caller_identity.current",
            "module.eks_backend.data.aws_partition.current",
            "module.eks_backend.data.aws_region.current",
            "module.eks_backend.data.tls_certificate.oidc_cert",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_app",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].backend",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "sentinel-backend/hello-backend",
            "metadata": [
              {
                "generation": 0,
                "name": "hello-backend",
                "namespace": "sentinel-backend",
                "resource_version": "20828",
                "uid": "2ed0d2fc-99c6-4da1-a572-30dc3d232ac7"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.7.191",
                "cluster_ips": [
                  "172.20.7.191"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31367,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "hello-backend"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "hello-backend",
            "namespace": "sentinel-backend"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.backend",
            "module.eks_backend.aws_eks_addon.coredns",
            "module.eks_backend.aws_eks_addon.kube_proxy",
            "module.eks_backend.aws_eks_addon.vpc_cni",
            "module.eks_backend.aws_eks_cluster.this",
            "module.eks_backend.aws_eks_node_group.default",
            "module.eks_backend.aws_iam_openid_connect_provider.this",
            "module.eks_backend.aws_iam_role.cluster",
            "module.eks_backend.aws_iam_role.node",
            "module.eks_backend.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks_backend.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceController",
            "module.eks_backend.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.eks_backend.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.eks_backend.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.eks_backend.aws_iam_role_policy_attachment.node_AmazonSSMManagedInstanceCore",
            "module.eks_backend.data.aws_caller_identity.current",
            "module.eks_backend.data.aws_partition.current",
            "module.eks_backend.data.aws_region.current",
            "module.eks_backend.data.tls_certificate.oidc_cert",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_app",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].gateway",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "sentinel-gateway/gateway-proxy-ingress",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "kubernetes.io/ingress.class": "alb"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "gateway-proxy-ingress",
                "namespace": "sentinel-gateway",
                "resource_version": "37823",
                "uid": "801a3a04-a72c-4393-a577-7523e3281cbe"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "gateway-proxy",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "gateway-proxy-ingress",
            "namespace": "sentinel-gateway"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.gateway",
            "module.eks_gateway.aws_eks_addon.coredns",
            "module.eks_gateway.aws_eks_addon.kube_proxy",
            "module.eks_gateway.aws_eks_addon.vpc_cni",
            "module.eks_gateway.aws_eks_cluster.this",
            "module.eks_gateway.aws_eks_node_group.default",
            "module.eks_gateway.aws_iam_openid_connect_provider.this",
            "module.eks_gateway.aws_iam_role.cluster",
            "module.eks_gateway.aws_iam_role.node",
            "module.eks_gateway.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks_gateway.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceController",
            "module.eks_gateway.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.eks_gateway.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.eks_gateway.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.eks_gateway.aws_iam_role_policy_attachment.node_AmazonSSMManagedInstanceCore",
            "module.eks_gateway.data.aws_caller_identity.current",
            "module.eks_gateway.data.aws_partition.current",
            "module.eks_gateway.data.aws_region.current",
            "module.eks_gateway.data.tls_certificate.oidc_cert",
            "module.gateway_app.kubernetes_service.this",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_app",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].gateway",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "sentinel-gateway",
            "metadata": [
              {
                "generation": 0,
                "name": "sentinel-gateway",
                "resource_version": "37813",
                "uid": "bbaa3a8a-1b97-4e74-8985-e95680805575"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "sentinel-gateway"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.gateway",
            "module.eks_gateway.aws_eks_addon.coredns",
            "module.eks_gateway.aws_eks_addon.kube_proxy",
            "module.eks_gateway.aws_eks_addon.vpc_cni",
            "module.eks_gateway.aws_eks_cluster.this",
            "module.eks_gateway.aws_eks_node_group.default",
            "module.eks_gateway.aws_iam_openid_connect_provider.this",
            "module.eks_gateway.aws_iam_role.cluster",
            "module.eks_gateway.aws_iam_role.node",
            "module.eks_gateway.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks_gateway.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceController",
            "module.eks_gateway.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.eks_gateway.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.eks_gateway.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.eks_gateway.aws_iam_role_policy_attachment.node_AmazonSSMManagedInstanceCore",
            "module.eks_gateway.data.aws_caller_identity.current",
            "module.eks_gateway.data.aws_partition.current",
            "module.eks_gateway.data.aws_region.current",
            "module.eks_gateway.data.tls_certificate.oidc_cert",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_app",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].gateway",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "sentinel-gateway/gateway-proxy",
            "metadata": [
              {
                "generation": 0,
                "name": "gateway-proxy",
                "namespace": "sentinel-gateway",
                "resource_version": "37818",
                "uid": "439848f6-555c-4199-a5b3-406d4244e5ce"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.153.156",
                "cluster_ips": [
                  "172.20.153.156"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "gateway-proxy"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "gateway-proxy",
            "namespace": "sentinel-gateway"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.gateway",
            "module.eks_gateway.aws_eks_addon.coredns",
            "module.eks_gateway.aws_eks_addon.kube_proxy",
            "module.eks_gateway.aws_eks_addon.vpc_cni",
            "module.eks_gateway.aws_eks_cluster.this",
            "module.eks_gateway.aws_eks_node_group.default",
            "module.eks_gateway.aws_iam_openid_connect_provider.this",
            "module.eks_gateway.aws_iam_role.cluster",
            "module.eks_gateway.aws_iam_role.node",
            "module.eks_gateway.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks_gateway.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceController",
            "module.eks_gateway.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.eks_gateway.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.eks_gateway.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.eks_gateway.aws_iam_role_policy_attachment.node_AmazonSSMManagedInstanceCore",
            "module.eks_gateway.data.aws_caller_identity.current",
            "module.eks_gateway.data.aws_partition.current",
            "module.eks_gateway.data.aws_region.current",
            "module.eks_gateway.data.tls_certificate.oidc_cert",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "acc_to_req",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0efd789ff030f250f519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0efd789ff030f250f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f5f6dee4052e7a58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0efd789ff030f250f"
          },
          "dependencies": [
            "module.peering.aws_vpc_peering_connection.this",
            "module.vpc_backend.aws_route_table.private",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this",
            "module.vpc_gateway.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a9d96bdb60fcf86a519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0a9d96bdb60fcf86a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f5f6dee4052e7a58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0a9d96bdb60fcf86a"
          },
          "dependencies": [
            "module.peering.aws_vpc_peering_connection.this",
            "module.vpc_backend.aws_route_table.private",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this",
            "module.vpc_gateway.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "req_to_acc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-017ebf3cb78610c78662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-017ebf3cb78610c78",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f5f6dee4052e7a58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-017ebf3cb78610c78"
          },
          "dependencies": [
            "module.peering.aws_vpc_peering_connection.this",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02bff00d79d5e3600662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-02bff00d79d5e3600",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f5f6dee4052e7a58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-02bff00d79d5e3600"
          },
          "dependencies": [
            "module.peering.aws_vpc_peering_connection.this",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0f5f6dee4052e7a58",
            "peer_owner_id": "928470004462",
            "peer_region": "eu-west-2",
            "peer_vpc_id": "vpc-01ffcf523ffd05af6",
            "region": "eu-west-2",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "sentinel-gw-backend",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gw-backend",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_gateway.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b893452505743a1",
            "arn": "arn:aws:ec2:eu-west-2:928470004462:elastic-ip/eipalloc-00b893452505743a1",
            "domain": "vpc",
            "id": "eipalloc-00b893452505743a1",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-8-109-109.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.109.109",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-backend-nat-eip-0",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-nat-eip-0",
              "Owner": "Platform",
              "Project": "Sentinel"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_subnet.public",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01011f86af6a4559b",
            "arn": "arn:aws:ec2:eu-west-2:928470004462:elastic-ip/eipalloc-01011f86af6a4559b",
            "domain": "vpc",
            "id": "eipalloc-01011f86af6a4559b",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-168-173-195.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.168.173.195",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-backend-nat-eip-1",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-nat-eip-1",
              "Owner": "Platform",
              "Project": "Sentinel"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_subnet.public",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:internet-gateway/igw-01b5ac0d102afeb79",
            "id": "igw-01b5ac0d102afeb79",
            "owner_id": "928470004462",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-backend-igw",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-igw",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b893452505743a1",
            "association_id": "eipassoc-090037d457a8cb878",
            "connectivity_type": "public",
            "id": "nat-06c7e970848e76e19",
            "network_interface_id": "eni-085b0e07fd9ad6822",
            "private_ip": "10.20.101.214",
            "public_ip": "3.8.109.109",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-002ef088c343e96eb",
            "tags": {
              "Name": "sentinel-backend-nat-0",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-nat-0",
              "Owner": "Platform",
              "Project": "Sentinel"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_eip.nat",
            "module.vpc_backend.aws_internet_gateway.igw",
            "module.vpc_backend.aws_subnet.public",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01011f86af6a4559b",
            "association_id": "eipassoc-0f1c435b6cccd5874",
            "connectivity_type": "public",
            "id": "nat-0071b50a74a1a78e5",
            "network_interface_id": "eni-08aa316e7f71db6b8",
            "private_ip": "10.20.102.143",
            "public_ip": "18.168.173.195",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0919b75b8e84a8c3e",
            "tags": {
              "Name": "sentinel-backend-nat-1",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-nat-1",
              "Owner": "Platform",
              "Project": "Sentinel"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_eip.nat",
            "module.vpc_backend.aws_internet_gateway.igw",
            "module.vpc_backend.aws_subnet.public",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0efd789ff030f250f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06c7e970848e76e19",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0efd789ff030f250f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0efd789ff030f250f"
          },
          "dependencies": [
            "module.vpc_backend.aws_eip.nat",
            "module.vpc_backend.aws_internet_gateway.igw",
            "module.vpc_backend.aws_nat_gateway.nat",
            "module.vpc_backend.aws_route_table.private",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_subnet.public",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a9d96bdb60fcf86a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0071b50a74a1a78e5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0a9d96bdb60fcf86a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0a9d96bdb60fcf86a"
          },
          "dependencies": [
            "module.vpc_backend.aws_eip.nat",
            "module.vpc_backend.aws_internet_gateway.igw",
            "module.vpc_backend.aws_nat_gateway.nat",
            "module.vpc_backend.aws_route_table.private",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_subnet.public",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01b5ac0d102afeb79",
            "id": "r-rtb-0d59357cc1d3986751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0d59357cc1d398675",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0d59357cc1d398675"
          },
          "dependencies": [
            "module.vpc_backend.aws_internet_gateway.igw",
            "module.vpc_backend.aws_route_table.public",
            "module.vpc_backend.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:route-table/rtb-0efd789ff030f250f",
            "id": "rtb-0efd789ff030f250f",
            "owner_id": "928470004462",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Name": "sentinel-backend-private-0",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-private-0",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "rtb-0efd789ff030f250f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:route-table/rtb-0a9d96bdb60fcf86a",
            "id": "rtb-0a9d96bdb60fcf86a",
            "owner_id": "928470004462",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Name": "sentinel-backend-private-1",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-private-1",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "rtb-0a9d96bdb60fcf86a",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:route-table/rtb-0d59357cc1d398675",
            "id": "rtb-0d59357cc1d398675",
            "owner_id": "928470004462",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Name": "sentinel-backend-public",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-public",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "rtb-0d59357cc1d398675",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_backend.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04114a6e0e902aeba",
            "region": "eu-west-2",
            "route_table_id": "rtb-0efd789ff030f250f",
            "subnet_id": "subnet-0fab4a404bba0f5d1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_route_table.private",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efce86472d7948f7",
            "region": "eu-west-2",
            "route_table_id": "rtb-0a9d96bdb60fcf86a",
            "subnet_id": "subnet-04e24c36c331cb753"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_route_table.private",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0211edae129e34157",
            "region": "eu-west-2",
            "route_table_id": "rtb-0d59357cc1d398675",
            "subnet_id": "subnet-002ef088c343e96eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_route_table.public",
            "module.vpc_backend.aws_subnet.public",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaf01544cf712a5f",
            "region": "eu-west-2",
            "route_table_id": "rtb-0d59357cc1d398675",
            "subnet_id": "subnet-0919b75b8e84a8c3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_route_table.public",
            "module.vpc_backend.aws_subnet.public",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:security-group/sg-0b1646846f4bb162c",
            "description": "Allow VPC internal traffic to interface endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1646846f4bb162c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sentinel-backend-vpce-sg",
            "name_prefix": "",
            "owner_id": "928470004462",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sentinel-backend-vpce-sg",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-vpce-sg",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "sg-0b1646846f4bb162c",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_backend.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:subnet/subnet-0fab4a404bba0f5d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fab4a404bba0f5d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928470004462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-backend-private-0",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-backend": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "sentinel-backend-private-0",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-backend": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "subnet-0fab4a404bba0f5d1",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:subnet/subnet-04e24c36c331cb753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e24c36c331cb753",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928470004462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-backend-private-1",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-backend": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "sentinel-backend-private-1",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-backend": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "subnet-04e24c36c331cb753",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:subnet/subnet-002ef088c343e96eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.20.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002ef088c343e96eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928470004462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-backend-public-0",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-backend": "shared"
            },
            "tags_all": {
              "Name": "sentinel-backend-public-0",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-backend": "shared"
            },
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "subnet-002ef088c343e96eb",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:subnet/subnet-0919b75b8e84a8c3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.20.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0919b75b8e84a8c3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928470004462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-backend-public-1",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-backend": "shared"
            },
            "tags_all": {
              "Name": "sentinel-backend-public-1",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-backend": "shared"
            },
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "subnet-0919b75b8e84a8c3e",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc/vpc-01ffcf523ffd05af6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-00f987c431f32ab27",
            "default_route_table_id": "rtb-096c37dbe7c270691",
            "default_security_group_id": "sg-074d9c61551fa4594",
            "dhcp_options_id": "dopt-04f788a94684bdb20",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01ffcf523ffd05af6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096c37dbe7c270691",
            "owner_id": "928470004462",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-backend",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend",
              "Owner": "Platform",
              "Project": "Sentinel"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dynamodb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-035b9374f0e97ddd7",
            "cidr_blocks": [
              "35.71.111.0/25",
              "52.94.15.0/24",
              "35.71.111.128/26"
            ],
            "id": "vpce-035b9374f0e97ddd7",
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-b3a742da",
            "private_dns_enabled": false,
            "region": "eu-west-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0a9d96bdb60fcf86a",
              "rtb-0efd789ff030f250f"
            ],
            "service_name": "com.amazonaws.eu-west-2.dynamodb",
            "service_region": "eu-west-2",
            "state": "available",
            "tags": {
              "Name": "sentinel-backend-vpce-dynamodb",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-vpce-dynamodb",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_route_table.private",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this",
            "module.vpc_backend.data.aws_region.current"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-0b7333744b4c18e02",
            "cidr_blocks": [
              "52.95.150.0/24",
              "52.95.191.0/24",
              "52.95.142.0/23",
              "16.12.16.0/23",
              "3.5.244.0/22",
              "52.219.219.0/24",
              "52.95.144.0/24",
              "52.95.148.0/23",
              "16.12.15.0/24"
            ],
            "id": "vpce-0b7333744b4c18e02",
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ca54015",
            "private_dns_enabled": false,
            "region": "eu-west-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0a9d96bdb60fcf86a",
              "rtb-0efd789ff030f250f"
            ],
            "service_name": "com.amazonaws.eu-west-2.s3",
            "service_region": "eu-west-2",
            "state": "available",
            "tags": {
              "Name": "sentinel-backend-vpce-s3",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-vpce-s3",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_route_table.private",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this",
            "module.vpc_backend.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "com.amazonaws.eu-west-2.ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-0b327f48dc5b0481c",
            "dns_entry": [
              {
                "dns_name": "vpce-0b327f48dc5b0481c-2lzt4axr.ec2.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0b327f48dc5b0481c-2lzt4axr-eu-west-2b.ec2.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0b327f48dc5b0481c-2lzt4axr-eu-west-2a.ec2.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ec2.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z0188988159CPVR9VTAM6"
              },
              {
                "dns_name": "ec2.eu-west-2.api.aws",
                "hosted_zone_id": "Z01889632YKQC8PABZUPN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b327f48dc5b0481c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00b83e8d53a770b9a",
              "eni-01f62be4c4309ced0"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1646846f4bb162c"
            ],
            "service_name": "com.amazonaws.eu-west-2.ec2",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.1.150",
                "subnet_id": "subnet-0fab4a404bba0f5d1"
              },
              {
                "ipv4": "10.20.2.136",
                "subnet_id": "subnet-04e24c36c331cb753"
              }
            ],
            "subnet_ids": [
              "subnet-04e24c36c331cb753",
              "subnet-0fab4a404bba0f5d1"
            ],
            "tags": {
              "Name": "sentinel-backend-vpce-ec2",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-vpce-ec2",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_security_group.endpoints",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this",
            "module.vpc_backend.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-0cd8f29236098fe38",
            "dns_entry": [
              {
                "dns_name": "vpce-0cd8f29236098fe38-gccvavus.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0cd8f29236098fe38-gccvavus-eu-west-2a.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0cd8f29236098fe38-gccvavus-eu-west-2b.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ec2messages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z065217954BV8UTHF540"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cd8f29236098fe38",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00fb3e2e4efb2f9ca",
              "eni-02b42a9a419b8d579"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1646846f4bb162c"
            ],
            "service_name": "com.amazonaws.eu-west-2.ec2messages",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.1.195",
                "subnet_id": "subnet-0fab4a404bba0f5d1"
              },
              {
                "ipv4": "10.20.2.79",
                "subnet_id": "subnet-04e24c36c331cb753"
              }
            ],
            "subnet_ids": [
              "subnet-04e24c36c331cb753",
              "subnet-0fab4a404bba0f5d1"
            ],
            "tags": {
              "Name": "sentinel-backend-vpce-ec2messages",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-vpce-ec2messages",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_security_group.endpoints",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this",
            "module.vpc_backend.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ecr.api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-00900f69c4e5af1db",
            "dns_entry": [
              {
                "dns_name": "vpce-00900f69c4e5af1db-crw2rhoi.api.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-00900f69c4e5af1db-crw2rhoi-eu-west-2a.api.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-00900f69c4e5af1db-crw2rhoi-eu-west-2b.api.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "api.ecr.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z07358532Z62HTOXCBVVZ"
              },
              {
                "dns_name": "ecr.eu-west-2.api.aws",
                "hosted_zone_id": "Z07360702144SQQ55X2OM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00900f69c4e5af1db",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02e3aeb50993a933c",
              "eni-0fb3890ce8cc66171"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1646846f4bb162c"
            ],
            "service_name": "com.amazonaws.eu-west-2.ecr.api",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.1.117",
                "subnet_id": "subnet-0fab4a404bba0f5d1"
              },
              {
                "ipv4": "10.20.2.98",
                "subnet_id": "subnet-04e24c36c331cb753"
              }
            ],
            "subnet_ids": [
              "subnet-04e24c36c331cb753",
              "subnet-0fab4a404bba0f5d1"
            ],
            "tags": {
              "Name": "sentinel-backend-vpce-ecr.api",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-vpce-ecr.api",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_security_group.endpoints",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this",
            "module.vpc_backend.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ecr.dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-0aeb9a726ab375542",
            "dns_entry": [
              {
                "dns_name": "vpce-0aeb9a726ab375542-r0rt7n3a.dkr.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0aeb9a726ab375542-r0rt7n3a-eu-west-2b.dkr.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0aeb9a726ab375542-r0rt7n3a-eu-west-2a.dkr.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "dkr.ecr.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z01906171YXRD0INYXR9R"
              },
              {
                "dns_name": "*.dkr.ecr.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z01906171YXRD0INYXR9R"
              },
              {
                "dns_name": "dkr-ecr.eu-west-2.on.aws",
                "hosted_zone_id": "Z06533973E2F6K7F03ISL"
              },
              {
                "dns_name": "*.dkr-ecr.eu-west-2.on.aws",
                "hosted_zone_id": "Z06533973E2F6K7F03ISL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0aeb9a726ab375542",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09b9758f1a7c3a544",
              "eni-0c96af94f7a1a89f6"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1646846f4bb162c"
            ],
            "service_name": "com.amazonaws.eu-west-2.ecr.dkr",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.1.158",
                "subnet_id": "subnet-0fab4a404bba0f5d1"
              },
              {
                "ipv4": "10.20.2.250",
                "subnet_id": "subnet-04e24c36c331cb753"
              }
            ],
            "subnet_ids": [
              "subnet-04e24c36c331cb753",
              "subnet-0fab4a404bba0f5d1"
            ],
            "tags": {
              "Name": "sentinel-backend-vpce-ecr.dkr",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-vpce-ecr.dkr",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_security_group.endpoints",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this",
            "module.vpc_backend.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.kms",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-07f2f492e013200c1",
            "dns_entry": [
              {
                "dns_name": "vpce-07f2f492e013200c1-obfsqqap.kms.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-07f2f492e013200c1-obfsqqap-eu-west-2a.kms.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-07f2f492e013200c1-obfsqqap-eu-west-2b.kms.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "kms.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z01894201UI56CYKSFAEW"
              },
              {
                "dns_name": "kms.eu-west-2.api.aws",
                "hosted_zone_id": "Z0736566CIGFDR89QCMC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07f2f492e013200c1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03acc38baa6aea5dc",
              "eni-08bb4f1525d8e9d6f"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1646846f4bb162c"
            ],
            "service_name": "com.amazonaws.eu-west-2.kms",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.1.156",
                "subnet_id": "subnet-0fab4a404bba0f5d1"
              },
              {
                "ipv4": "10.20.2.144",
                "subnet_id": "subnet-04e24c36c331cb753"
              }
            ],
            "subnet_ids": [
              "subnet-04e24c36c331cb753",
              "subnet-0fab4a404bba0f5d1"
            ],
            "tags": {
              "Name": "sentinel-backend-vpce-kms",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-vpce-kms",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_security_group.endpoints",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this",
            "module.vpc_backend.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-02b5d1589b829749e",
            "dns_entry": [
              {
                "dns_name": "vpce-02b5d1589b829749e-cmwdg2mr.logs.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-02b5d1589b829749e-cmwdg2mr-eu-west-2b.logs.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-02b5d1589b829749e-cmwdg2mr-eu-west-2a.logs.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "logs.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z06529702ZM7RSXAULAVT"
              },
              {
                "dns_name": "logs.eu-west-2.api.aws",
                "hosted_zone_id": "Z01893682DPEQT2A0VCSE"
              },
              {
                "dns_name": "streaming-logs.eu-west-2.api.aws",
                "hosted_zone_id": "Z0189375164551GCNNB1O"
              },
              {
                "dns_name": "streaming-logs.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z03525932LJUCUO8824G1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02b5d1589b829749e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05cfdb921910831d1",
              "eni-08b91e1f620820479"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1646846f4bb162c"
            ],
            "service_name": "com.amazonaws.eu-west-2.logs",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.1.236",
                "subnet_id": "subnet-0fab4a404bba0f5d1"
              },
              {
                "ipv4": "10.20.2.7",
                "subnet_id": "subnet-04e24c36c331cb753"
              }
            ],
            "subnet_ids": [
              "subnet-04e24c36c331cb753",
              "subnet-0fab4a404bba0f5d1"
            ],
            "tags": {
              "Name": "sentinel-backend-vpce-logs",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-vpce-logs",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_security_group.endpoints",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this",
            "module.vpc_backend.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.secretsmanager",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-0693bd87e4d69652f",
            "dns_entry": [
              {
                "dns_name": "vpce-0693bd87e4d69652f-sjvh2pa8.secretsmanager.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0693bd87e4d69652f-sjvh2pa8-eu-west-2a.secretsmanager.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0693bd87e4d69652f-sjvh2pa8-eu-west-2b.secretsmanager.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "secretsmanager.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z035235116BI0F9YI6VCZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0693bd87e4d69652f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0dbfd818c70037472",
              "eni-0ed1de7cec4a4a8df"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1646846f4bb162c"
            ],
            "service_name": "com.amazonaws.eu-west-2.secretsmanager",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.1.187",
                "subnet_id": "subnet-0fab4a404bba0f5d1"
              },
              {
                "ipv4": "10.20.2.226",
                "subnet_id": "subnet-04e24c36c331cb753"
              }
            ],
            "subnet_ids": [
              "subnet-04e24c36c331cb753",
              "subnet-0fab4a404bba0f5d1"
            ],
            "tags": {
              "Name": "sentinel-backend-vpce-secretsmanager",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-vpce-secretsmanager",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_security_group.endpoints",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this",
            "module.vpc_backend.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-07044aee9d7ba7927",
            "dns_entry": [
              {
                "dns_name": "vpce-07044aee9d7ba7927-dgq9stq3.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-07044aee9d7ba7927-dgq9stq3-eu-west-2a.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-07044aee9d7ba7927-dgq9stq3-eu-west-2b.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssm.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z06429838P96ZKYL3W5Z"
              },
              {
                "dns_name": "ssm.eu-west-2.api.aws",
                "hosted_zone_id": "Z01889273O2CJO9RH8QZI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07044aee9d7ba7927",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-000fb150bd2d3c361",
              "eni-0d74efd4e2e89c722"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1646846f4bb162c"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssm",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.1.171",
                "subnet_id": "subnet-0fab4a404bba0f5d1"
              },
              {
                "ipv4": "10.20.2.95",
                "subnet_id": "subnet-04e24c36c331cb753"
              }
            ],
            "subnet_ids": [
              "subnet-04e24c36c331cb753",
              "subnet-0fab4a404bba0f5d1"
            ],
            "tags": {
              "Name": "sentinel-backend-vpce-ssm",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-vpce-ssm",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_security_group.endpoints",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this",
            "module.vpc_backend.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-0a2919ddf95d8a03e",
            "dns_entry": [
              {
                "dns_name": "vpce-0a2919ddf95d8a03e-q119ryaq.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0a2919ddf95d8a03e-q119ryaq-eu-west-2a.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0a2919ddf95d8a03e-q119ryaq-eu-west-2b.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssmmessages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z06521691I9O2RNZ41PEI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a2919ddf95d8a03e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02f281ea8506eb2aa",
              "eni-0cd5a12581c1bd3ef"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1646846f4bb162c"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssmmessages",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.1.209",
                "subnet_id": "subnet-0fab4a404bba0f5d1"
              },
              {
                "ipv4": "10.20.2.31",
                "subnet_id": "subnet-04e24c36c331cb753"
              }
            ],
            "subnet_ids": [
              "subnet-04e24c36c331cb753",
              "subnet-0fab4a404bba0f5d1"
            ],
            "tags": {
              "Name": "sentinel-backend-vpce-ssmmessages",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-backend-vpce-ssmmessages",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01ffcf523ffd05af6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.aws_security_group.endpoints",
            "module.vpc_backend.aws_subnet.private",
            "module.vpc_backend.aws_vpc.this",
            "module.vpc_backend.data.aws_availability_zones.this",
            "module.vpc_backend.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbfa2492813a65ee",
            "arn": "arn:aws:ec2:eu-west-2:928470004462:elastic-ip/eipalloc-0dbfa2492813a65ee",
            "domain": "vpc",
            "id": "eipalloc-0dbfa2492813a65ee",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-8-244-98.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.244.98",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-gateway-nat-eip-0",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-nat-eip-0",
              "Owner": "Platform",
              "Project": "Sentinel"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fac5605f16887f64",
            "arn": "arn:aws:ec2:eu-west-2:928470004462:elastic-ip/eipalloc-0fac5605f16887f64",
            "domain": "vpc",
            "id": "eipalloc-0fac5605f16887f64",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-43-200-28.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.200.28",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-gateway-nat-eip-1",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-nat-eip-1",
              "Owner": "Platform",
              "Project": "Sentinel"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:internet-gateway/igw-07772ad568c833e19",
            "id": "igw-07772ad568c833e19",
            "owner_id": "928470004462",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-gateway-igw",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-igw",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbfa2492813a65ee",
            "association_id": "eipassoc-017694971869fd399",
            "connectivity_type": "public",
            "id": "nat-01ac3dae5af8d1165",
            "network_interface_id": "eni-0a974874fb43d47f3",
            "private_ip": "10.10.101.232",
            "public_ip": "3.8.244.98",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-096edbd5cb746f838",
            "tags": {
              "Name": "sentinel-gateway-nat-0",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-nat-0",
              "Owner": "Platform",
              "Project": "Sentinel"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_eip.nat",
            "module.vpc_gateway.aws_internet_gateway.igw",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fac5605f16887f64",
            "association_id": "eipassoc-0d676ca282f313cd3",
            "connectivity_type": "public",
            "id": "nat-0fd4c34f6c2976645",
            "network_interface_id": "eni-0b31ad2f6357a0af1",
            "private_ip": "10.10.102.60",
            "public_ip": "13.43.200.28",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a32edff021f237ff",
            "tags": {
              "Name": "sentinel-gateway-nat-1",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-nat-1",
              "Owner": "Platform",
              "Project": "Sentinel"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_eip.nat",
            "module.vpc_gateway.aws_internet_gateway.igw",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-017ebf3cb78610c781080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01ac3dae5af8d1165",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-017ebf3cb78610c78",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-017ebf3cb78610c78"
          },
          "dependencies": [
            "module.vpc_gateway.aws_eip.nat",
            "module.vpc_gateway.aws_internet_gateway.igw",
            "module.vpc_gateway.aws_nat_gateway.nat",
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02bff00d79d5e36001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fd4c34f6c2976645",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-02bff00d79d5e3600",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-02bff00d79d5e3600"
          },
          "dependencies": [
            "module.vpc_gateway.aws_eip.nat",
            "module.vpc_gateway.aws_internet_gateway.igw",
            "module.vpc_gateway.aws_nat_gateway.nat",
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07772ad568c833e19",
            "id": "r-rtb-0a393e5d09f6d23c31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0a393e5d09f6d23c3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0a393e5d09f6d23c3"
          },
          "dependencies": [
            "module.vpc_gateway.aws_internet_gateway.igw",
            "module.vpc_gateway.aws_route_table.public",
            "module.vpc_gateway.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:route-table/rtb-017ebf3cb78610c78",
            "id": "rtb-017ebf3cb78610c78",
            "owner_id": "928470004462",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Name": "sentinel-gateway-private-0",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-private-0",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "rtb-017ebf3cb78610c78",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:route-table/rtb-02bff00d79d5e3600",
            "id": "rtb-02bff00d79d5e3600",
            "owner_id": "928470004462",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Name": "sentinel-gateway-private-1",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-private-1",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "rtb-02bff00d79d5e3600",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:route-table/rtb-0a393e5d09f6d23c3",
            "id": "rtb-0a393e5d09f6d23c3",
            "owner_id": "928470004462",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Name": "sentinel-gateway-public",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-public",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "rtb-0a393e5d09f6d23c3",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_gateway.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3fe86f2a02be89e",
            "region": "eu-west-2",
            "route_table_id": "rtb-017ebf3cb78610c78",
            "subnet_id": "subnet-03df66fd0c80f723a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017acab962dfb2ea6",
            "region": "eu-west-2",
            "route_table_id": "rtb-02bff00d79d5e3600",
            "subnet_id": "subnet-068a6a276e18c30c7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e33192b426cdf8bf",
            "region": "eu-west-2",
            "route_table_id": "rtb-0a393e5d09f6d23c3",
            "subnet_id": "subnet-096edbd5cb746f838"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_route_table.public",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092cc8696d8b1f1eb",
            "region": "eu-west-2",
            "route_table_id": "rtb-0a393e5d09f6d23c3",
            "subnet_id": "subnet-0a32edff021f237ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_route_table.public",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:security-group/sg-070e1d05560d3462e",
            "description": "Allow VPC internal traffic to interface endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070e1d05560d3462e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sentinel-gateway-vpce-sg",
            "name_prefix": "",
            "owner_id": "928470004462",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sentinel-gateway-vpce-sg",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-vpce-sg",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "sg-070e1d05560d3462e",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_gateway.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:subnet/subnet-03df66fd0c80f723a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03df66fd0c80f723a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928470004462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-gateway-private-0",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-gateway": "shared"
            },
            "tags_all": {
              "Name": "sentinel-gateway-private-0",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-gateway": "shared"
            },
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "subnet-03df66fd0c80f723a",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:subnet/subnet-068a6a276e18c30c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068a6a276e18c30c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928470004462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-gateway-private-1",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-gateway": "shared"
            },
            "tags_all": {
              "Name": "sentinel-gateway-private-1",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-gateway": "shared"
            },
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "subnet-068a6a276e18c30c7",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:subnet/subnet-096edbd5cb746f838",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096edbd5cb746f838",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928470004462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-gateway-public-0",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-gateway": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sentinel-gateway-public-0",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-gateway": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "subnet-096edbd5cb746f838",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:subnet/subnet-0a32edff021f237ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a32edff021f237ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928470004462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-gateway-public-1",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-gateway": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sentinel-gateway-public-1",
              "Owner": "Platform",
              "Project": "Sentinel",
              "kubernetes.io/cluster/sentinel-eks-gateway": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "928470004462",
            "id": "subnet-0a32edff021f237ff",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc/vpc-09d2218133f865a44",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02da65aa60b91ac3f",
            "default_route_table_id": "rtb-010d03e91649137e3",
            "default_security_group_id": "sg-0a3040ef1ddf645bc",
            "dhcp_options_id": "dopt-04f788a94684bdb20",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d2218133f865a44",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010d03e91649137e3",
            "owner_id": "928470004462",
            "region": "eu-west-2",
            "tags": {
              "Name": "sentinel-gateway",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway",
              "Owner": "Platform",
              "Project": "Sentinel"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-073049f1f5f4bf589",
            "cidr_blocks": [
              "52.95.150.0/24",
              "52.95.191.0/24",
              "52.95.142.0/23",
              "16.12.16.0/23",
              "3.5.244.0/22",
              "52.219.219.0/24",
              "52.95.144.0/24",
              "52.95.148.0/23",
              "16.12.15.0/24"
            ],
            "id": "vpce-073049f1f5f4bf589",
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ca54015",
            "private_dns_enabled": false,
            "region": "eu-west-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-017ebf3cb78610c78",
              "rtb-02bff00d79d5e3600"
            ],
            "service_name": "com.amazonaws.eu-west-2.s3",
            "service_region": "eu-west-2",
            "state": "available",
            "tags": {
              "Name": "sentinel-gateway-vpce-s3",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-vpce-s3",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this",
            "module.vpc_gateway.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "com.amazonaws.eu-west-2.ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-0109728758b8e8e94",
            "dns_entry": [
              {
                "dns_name": "vpce-0109728758b8e8e94-ozerrjwv.ec2.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0109728758b8e8e94-ozerrjwv-eu-west-2b.ec2.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0109728758b8e8e94-ozerrjwv-eu-west-2a.ec2.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ec2.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z03546681L4TVIXIW4DNK"
              },
              {
                "dns_name": "ec2.eu-west-2.api.aws",
                "hosted_zone_id": "Z01917721KHX8NUKCDOBA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0109728758b8e8e94",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02f4ec8dc019a6bc2",
              "eni-04167567ea8f6f4b8"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-070e1d05560d3462e"
            ],
            "service_name": "com.amazonaws.eu-west-2.ec2",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.1.101",
                "subnet_id": "subnet-03df66fd0c80f723a"
              },
              {
                "ipv4": "10.10.2.155",
                "subnet_id": "subnet-068a6a276e18c30c7"
              }
            ],
            "subnet_ids": [
              "subnet-03df66fd0c80f723a",
              "subnet-068a6a276e18c30c7"
            ],
            "tags": {
              "Name": "sentinel-gateway-vpce-ec2",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-vpce-ec2",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_security_group.endpoints",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this",
            "module.vpc_gateway.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-05c0d990a61dfba0f",
            "dns_entry": [
              {
                "dns_name": "vpce-05c0d990a61dfba0f-ofdzfs9t.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-05c0d990a61dfba0f-ofdzfs9t-eu-west-2b.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-05c0d990a61dfba0f-ofdzfs9t-eu-west-2a.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ec2messages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z03554642YHF9XQ6F42A9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05c0d990a61dfba0f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0044a727a10a83d5c",
              "eni-0f3eb8c574f82f43d"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-070e1d05560d3462e"
            ],
            "service_name": "com.amazonaws.eu-west-2.ec2messages",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.1.46",
                "subnet_id": "subnet-03df66fd0c80f723a"
              },
              {
                "ipv4": "10.10.2.196",
                "subnet_id": "subnet-068a6a276e18c30c7"
              }
            ],
            "subnet_ids": [
              "subnet-03df66fd0c80f723a",
              "subnet-068a6a276e18c30c7"
            ],
            "tags": {
              "Name": "sentinel-gateway-vpce-ec2messages",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-vpce-ec2messages",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_security_group.endpoints",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this",
            "module.vpc_gateway.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ecr.api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-04631a599cc765bc7",
            "dns_entry": [
              {
                "dns_name": "vpce-04631a599cc765bc7-m5z3a3by.api.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-04631a599cc765bc7-m5z3a3by-eu-west-2b.api.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-04631a599cc765bc7-m5z3a3by-eu-west-2a.api.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "api.ecr.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z03540842XRZVM0W6CY0L"
              },
              {
                "dns_name": "ecr.eu-west-2.api.aws",
                "hosted_zone_id": "Z073579838SY2G4BJXL78"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04631a599cc765bc7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01dab7284e1564440",
              "eni-058406afefee9eac9"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-070e1d05560d3462e"
            ],
            "service_name": "com.amazonaws.eu-west-2.ecr.api",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.1.17",
                "subnet_id": "subnet-03df66fd0c80f723a"
              },
              {
                "ipv4": "10.10.2.90",
                "subnet_id": "subnet-068a6a276e18c30c7"
              }
            ],
            "subnet_ids": [
              "subnet-03df66fd0c80f723a",
              "subnet-068a6a276e18c30c7"
            ],
            "tags": {
              "Name": "sentinel-gateway-vpce-ecr.api",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-vpce-ecr.api",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_security_group.endpoints",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this",
            "module.vpc_gateway.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ecr.dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-01ab34639d8b5507b",
            "dns_entry": [
              {
                "dns_name": "vpce-01ab34639d8b5507b-j5zmmpwi.dkr.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-01ab34639d8b5507b-j5zmmpwi-eu-west-2b.dkr.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-01ab34639d8b5507b-j5zmmpwi-eu-west-2a.dkr.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "dkr.ecr.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z03596702KEEIUABBDM2D"
              },
              {
                "dns_name": "*.dkr.ecr.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z03596702KEEIUABBDM2D"
              },
              {
                "dns_name": "dkr-ecr.eu-west-2.on.aws",
                "hosted_zone_id": "Z0736249I2XQM7ZGNA13"
              },
              {
                "dns_name": "*.dkr-ecr.eu-west-2.on.aws",
                "hosted_zone_id": "Z0736249I2XQM7ZGNA13"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01ab34639d8b5507b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02235709a49bba403",
              "eni-026e163f4f5a70908"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-070e1d05560d3462e"
            ],
            "service_name": "com.amazonaws.eu-west-2.ecr.dkr",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.1.178",
                "subnet_id": "subnet-03df66fd0c80f723a"
              },
              {
                "ipv4": "10.10.2.245",
                "subnet_id": "subnet-068a6a276e18c30c7"
              }
            ],
            "subnet_ids": [
              "subnet-03df66fd0c80f723a",
              "subnet-068a6a276e18c30c7"
            ],
            "tags": {
              "Name": "sentinel-gateway-vpce-ecr.dkr",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-vpce-ecr.dkr",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_security_group.endpoints",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this",
            "module.vpc_gateway.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.kms",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-0b7de7d54fc393676",
            "dns_entry": [
              {
                "dns_name": "vpce-0b7de7d54fc393676-lou97gc7.kms.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0b7de7d54fc393676-lou97gc7-eu-west-2a.kms.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0b7de7d54fc393676-lou97gc7-eu-west-2b.kms.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "kms.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z01923082384KJNIMHFWA"
              },
              {
                "dns_name": "kms.eu-west-2.api.aws",
                "hosted_zone_id": "Z019135319TTO87ILR8SO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b7de7d54fc393676",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0625fbf277862fe7a",
              "eni-0c072d2a527f77c67"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-070e1d05560d3462e"
            ],
            "service_name": "com.amazonaws.eu-west-2.kms",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.1.72",
                "subnet_id": "subnet-03df66fd0c80f723a"
              },
              {
                "ipv4": "10.10.2.124",
                "subnet_id": "subnet-068a6a276e18c30c7"
              }
            ],
            "subnet_ids": [
              "subnet-03df66fd0c80f723a",
              "subnet-068a6a276e18c30c7"
            ],
            "tags": {
              "Name": "sentinel-gateway-vpce-kms",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-vpce-kms",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_security_group.endpoints",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this",
            "module.vpc_gateway.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-08195d14000987812",
            "dns_entry": [
              {
                "dns_name": "vpce-08195d14000987812-tvanav80.logs.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-08195d14000987812-tvanav80-eu-west-2b.logs.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-08195d14000987812-tvanav80-eu-west-2a.logs.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "logs.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z035495220RB489Z3HJNY"
              },
              {
                "dns_name": "logs.eu-west-2.api.aws",
                "hosted_zone_id": "Z01914411N6WQGBIAAHV7"
              },
              {
                "dns_name": "streaming-logs.eu-west-2.api.aws",
                "hosted_zone_id": "Z06539481PX88KTJDUFDL"
              },
              {
                "dns_name": "streaming-logs.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z03537823A5524COV1BM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08195d14000987812",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09634970cacff0573",
              "eni-0b00c3096a5d320a6"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-070e1d05560d3462e"
            ],
            "service_name": "com.amazonaws.eu-west-2.logs",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.1.194",
                "subnet_id": "subnet-03df66fd0c80f723a"
              },
              {
                "ipv4": "10.10.2.194",
                "subnet_id": "subnet-068a6a276e18c30c7"
              }
            ],
            "subnet_ids": [
              "subnet-03df66fd0c80f723a",
              "subnet-068a6a276e18c30c7"
            ],
            "tags": {
              "Name": "sentinel-gateway-vpce-logs",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-vpce-logs",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_security_group.endpoints",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this",
            "module.vpc_gateway.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.secretsmanager",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-0b2d667b8bc20af35",
            "dns_entry": [
              {
                "dns_name": "vpce-0b2d667b8bc20af35-ju7mnk3x.secretsmanager.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0b2d667b8bc20af35-ju7mnk3x-eu-west-2b.secretsmanager.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0b2d667b8bc20af35-ju7mnk3x-eu-west-2a.secretsmanager.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "secretsmanager.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z07357953QDS0D2DGLGI3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b2d667b8bc20af35",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06757b434a6ee3da5",
              "eni-079375eb10a98156d"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-070e1d05560d3462e"
            ],
            "service_name": "com.amazonaws.eu-west-2.secretsmanager",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.1.67",
                "subnet_id": "subnet-03df66fd0c80f723a"
              },
              {
                "ipv4": "10.10.2.96",
                "subnet_id": "subnet-068a6a276e18c30c7"
              }
            ],
            "subnet_ids": [
              "subnet-03df66fd0c80f723a",
              "subnet-068a6a276e18c30c7"
            ],
            "tags": {
              "Name": "sentinel-gateway-vpce-secretsmanager",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-vpce-secretsmanager",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_security_group.endpoints",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this",
            "module.vpc_gateway.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-0ccd5158a55e94dee",
            "dns_entry": [
              {
                "dns_name": "vpce-0ccd5158a55e94dee-okc0k0id.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0ccd5158a55e94dee-okc0k0id-eu-west-2a.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0ccd5158a55e94dee-okc0k0id-eu-west-2b.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssm.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z065394735ENTLJDNG7E3"
              },
              {
                "dns_name": "ssm.eu-west-2.api.aws",
                "hosted_zone_id": "Z01904553MEOZ02CCI09D"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ccd5158a55e94dee",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-098c009c7ca568913",
              "eni-09f30365327559d0f"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-070e1d05560d3462e"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssm",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.1.53",
                "subnet_id": "subnet-03df66fd0c80f723a"
              },
              {
                "ipv4": "10.10.2.122",
                "subnet_id": "subnet-068a6a276e18c30c7"
              }
            ],
            "subnet_ids": [
              "subnet-03df66fd0c80f723a",
              "subnet-068a6a276e18c30c7"
            ],
            "tags": {
              "Name": "sentinel-gateway-vpce-ssm",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-vpce-ssm",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_security_group.endpoints",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this",
            "module.vpc_gateway.data.aws_region.current"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:928470004462:vpc-endpoint/vpce-0eb7acac4f8646305",
            "dns_entry": [
              {
                "dns_name": "vpce-0eb7acac4f8646305-4n1ygiuj.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0eb7acac4f8646305-4n1ygiuj-eu-west-2b.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0eb7acac4f8646305-4n1ygiuj-eu-west-2a.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssmmessages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z01917832Q5MD0N95BYLR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0eb7acac4f8646305",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0052e3198190a1dc5",
              "eni-0ad613fa77c1563c2"
            ],
            "owner_id": "928470004462",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-070e1d05560d3462e"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssmmessages",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.1.171",
                "subnet_id": "subnet-03df66fd0c80f723a"
              },
              {
                "ipv4": "10.10.2.234",
                "subnet_id": "subnet-068a6a276e18c30c7"
              }
            ],
            "subnet_ids": [
              "subnet-03df66fd0c80f723a",
              "subnet-068a6a276e18c30c7"
            ],
            "tags": {
              "Name": "sentinel-gateway-vpce-ssmmessages",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "tags_all": {
              "Name": "sentinel-gateway-vpce-ssmmessages",
              "Owner": "Platform",
              "Project": "Sentinel"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09d2218133f865a44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_security_group.endpoints",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.this",
            "module.vpc_gateway.data.aws_availability_zones.this",
            "module.vpc_gateway.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}